# rustclaw

./: .gitignore  .verify-iss006.sh  AGENTS.md  AUTOPILOT-2026-04-28.md  CHANGES_gid_infer.md  CODE_GRAPH_QUICK_REF.md  CODE_GRAPH_REFACTORING_GUIDE.md  Cargo.toml  DESIGN-session-resilience.md  DESIGN.md  EXECUTIVE_SUMMARY.md  HEARTBEAT.md  IDEA-POOL-DESIGN.md  IDEAS.md  IDENTITY.md  ISS-006-IMPLEMENTATION-SUMMARY.md  ISS-006-incremental-updates.md  ISS-006-review-design-VERIFICATION.txt  ISSUES.md  LICENSE  MEMORY.md  MERGE_SUMMARY.md  README.md  REFACTORING_AUDIT.md  REFACTORING_COMPLETE.md  RITUAL_RUNTIME.md  SOUL.md  STRATEGY.md  TEST-RESULTS.md  TESTING.md  TEST_WORKSPACE.md  TOOLS.md  USER.md  ai-phone-call-competitor-research.md  audit_implementation.sh  claude-code-3d-merged.html  claude-code-3d-new.html  claude-code-3d.html  projects  rustclaw.example.yaml  (+2 more)
.gid/: ISS-051-graph-update.md  SESSION-2026-04-06-CHANGES.md  SESSION-2026-04-06.md  config.yml  design-social-intake.md  execution-log.jsonl  execution-state.json  extract-meta.json  graph.yml  graph.yml.backup  graph.yml.bak  graph.yml.pre-rebuild  infer-preview.txt  infer-preview.yml  meta-graph.yml  projects.yml  requirements-gepa-core-v2.md  requirements-gepa-core.md  requirements-marketing-pipeline.md  requirements-marketing-ritual.md  requirements-self-improvement.md  requirements-social-intake.md  review-social-intake-round1.md  ritual-state.json  ritual.yml  rituals
.gid/_misplaced/: 2026-04-20-engram-kc-source-refs-bug.md
.gid/features/: BATCH3-DESIGN.md  DESIGN-autocompact.md  DESIGN-claude-proxy.md  DESIGN-session-resilience.md  DESIGN.md
.gid/issues/: ISS-020-project-path-discovery-friction.md  ISS-022-migrate-start-ritual-to-workunit.md  ISS-023-clawd-projects-path-debt.md  ISS-024-gid-tools-graph-path-override.md  ISS-025-ritual-implement-phase-burns-tokens-no-output.md  ISS-026-start-ritual-tool-misreports-progress.md  ISS-027-ritual-observer-context-injection.md  ISS-028-duplicate-rituals-same-work-unit.md  ISS-029-ritual-state-liveness-signal.md  ISS-030-multi-daemon-shared-workspace-ritual-race.md  ISS-048-start-ritual-tool-misreports-initializing-as-failure.md  ISS-049-skills-no-hot-reload.md
.gid/reviews/: design-01-02-review.md  design-03-04-review.md  design-05-06-review.md  design-07-08-09-review.md  design-master-review.md  gepa-design-01-02-review.md  gepa-design-03-04-review.md  gepa-design-05-06-review.md  gepa-design-07-08-09-review.md  gepa-design-master-review.md  gepa-req-02-pareto-front-review.md  gepa-req-03-adapter-review.md  gepa-req-04-proposers-review.md  gepa-req-05-candidates-review.md  gepa-req-06-state-review.md  gepa-req-07-config-review.md  gepa-req-08-data-loading-review.md  gepa-req-09-events-review.md  gepa-requirements-master-review.md  requirements-gepa-core-review.md  requirements-marketing-ritual-review.md  requirements-self-improvement-review.md  round2-consolidated-review.md
.gid/rituals/: r-04f359.json  r-1554a4.json  r-1ca0cc.json  r-2b3a1d.json  r-2bb573.json  r-36bd29.json  r-41798c.json  (+4 more)
docs/: BUGFIXES.md  DESIGN-context-efficiency.md  DESIGN-context-system.md  RESEARCH-gepa-core.md  context-efficiency-graph.yml
gid-core-work/: Cargo.toml
gid-core-work/.gid/: execution-log.jsonl
gid-core-work/src/: code_graph_old.rs  design.rs  lib.rs  parser.rs  query.rs  unified.rs  validator.rs  visual.rs  working_mem.rs
gid-core-work/src/code_graph/: analysis.rs  build.rs  extract.rs  format.rs  mod.rs  query.rs  test_analysis.rs  tests.rs  types.rs
gid-core-work/src/code_graph/lang/: mod.rs  python.rs  rust_lang.rs  typescript.rs
gid-core-work/src/harness/: config.rs  execution_state.rs  log_reader.rs  mod.rs  notifier.rs  replanner.rs  scheduler.rs  topology.rs  verifier.rs
gid-core-work/src/ritual/: approval.rs  artifact.rs  engine.rs  executor.rs  notifier.rs  state_machine.rs  v2_executor.rs
gid-core-work/tests/: approval_test.rs  artifact_test.rs  phase_executor_test.rs  ritual_engine_test.rs
intake/: index.md
marketing/: 3-month-plan-2026-04-28-zh.md  3-month-plan-2026-04-28.md  anti-ai-voice-rules.md  glossary-engram-for-phoebe.md  glossary-for-phoebe.md
memory/: 2026-03-27.md  2026-03-29.md  2026-03-31.md  2026-04-01.md  2026-04-02.md  2026-04-03-self-improvement-synthesis.md  2026-04-03.md  2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07-overnight-plan.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md  2026-04-11.md  2026-04-12.md  2026-04-13.md  2026-04-14.md  2026-04-15.md  2026-04-16.md  2026-04-17.md  2026-04-18.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-23.md  2026-04-24.md  2026-04-25.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  agentmemory-pr-draft.md  autopilot-proof.txt  autopilot-test.md  cogmembench-analysis.md  cogmembench-discussion.md  cogmembench-part2-design.md  consciousness-engineering-layers.md  (+4 more)
models/: silero_vad.onnx
scripts/: rolling-restart.sh  voice_emotion.py
skills-manager/: Cargo.toml
skills-manager/src/: cli.rs  lib.rs  main.rs  matcher.rs  parser.rs  registry.rs  schema.rs
skills-manager/tests/: integration.rs
src/: agent.rs  auth_profiles.rs  autopilot.rs  browser.rs  claude_cli.rs  config.rs  context.rs  credential.rs  cron.rs  daemon.rs  dashboard.rs  distributed.rs  engram_hooks.rs  events.rs  export.rs  gid.rs  heartbeat.rs  hooks.rs  interoceptive.rs  lifecycle.rs  llm.rs  main.rs  markdown.rs  memory.rs  memory_migrate.rs  message_queue.rs  notify_targets.rs  oauth.rs  orchestrator.rs  plugins.rs  reload.rs  ritual_adapter.rs  ritual_hooks.rs  ritual_integration_tests.rs  ritual_registry.rs  ritual_runner.rs  safety.rs  sandbox.rs  search.rs  serverless.rs  (+13 more)
tasks/: 2026-04-07-night-task.md  2026-04-07.md  2026-04-08-night-task.md  2026-04-20-cogmembench.md  2026-04-27-night-autopilot-REVIEW-r2.md  2026-04-27-night-autopilot-REVIEW.md  2026-04-27-night-autopilot-STATUS.md  2026-04-27-night-autopilot.md  2026-04-27-night-autopilot.md.before-review-fixes  gap-ritual-context.md  gap-sqlite-migration.md  locomo-source-text-verification.md
(+203 files in other folders)
