[package]
name = "rustclaw"
version = "0.1.0"
edition = "2021"
authors = ["tonitangpotato <tonitangpotato@users.noreply.github.com>"]
description = "Rust-native AI agent framework with cognitive memory, multi-agent orchestration, and security-first design"
repository = "https://github.com/tonitangpotato/rustclaw"
license = "MIT"
readme = "README.md"
keywords = ["agent", "ai", "llm", "memory", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Memory
engramai = { path = "../engram-ai-rust" }

# GID (task graph)
gid-core = { path = "../gid-rs/crates/gid-core" }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"

# File watching (config hot-reload)
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

# Utilities
anyhow = "1"
futures-util = "0.3"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
base64 = "0.22"
mime_guess = "2"
urlencoding = "2"

# Discord (serenity)
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }

# WebSocket for Slack Socket Mode
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# Glob pattern matching (for sandbox path restrictions)
glob = "0.3"

# HTTP middleware for dashboard
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# tempfile is needed in both tests and some features
tempfile = "3"

[dev-dependencies]
